--- a/package.json
+++ b/package.json
@@ -9,19 +9,52 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.18",
+    "@mui/icons-material": "^5.15.7",
+    "@mui/material": "^5.15.7",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.14",
+    "@mui/system": "^5.15.7",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.9.1",
+    "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
+    "headlessui": "^0.0.0",
+    "heroicons": "^2.1.1",
+    "lodash": "^4.17.21",
+    "mariadb": "^3.2.3",
+    "next": "14.1.0",
+    "next-auth": "^4.24.5",
+    "next-cloudinary": "^5.20.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-hook-form": "^7.50.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-loading-skeleton": "^3.4.0",
+    "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
+    "styled-components": "^6.1.8",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/bcrypt": "^5.0.2",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "prisma": "^5.9.1",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
