환경설정 추가

--- a/.env
+++ b/.env
@@ -7,6 +7,29 @@
 # DATABASE_URL="postgresql://postgres:b5cf6A45DagbbdGbAF5b33eGD1*CD3Db@postgres.railway.internal:5432/railway"
 #DATABASE_URL="postgresql://postgres:password@localhost:5432/daily"
 
+
+#springboot server url
+SERVER_BASE_URL=""
+
+
+#google
+GOOGLE_API_KEY="AIzaSyBfKwZBZ5epEYPU3cxJ9xKqSOHuDTarLrs"
+GOOGLE_AUTO_DOMAIN="bbanggu-korea.firebaseapp.com"
+GOOGLE_PROJECT_ID="bbanggu-korea"
+GOOGLE_STORAGE_BUCKET="bbanggu-korea.appspot.com"
+GOOGLE_MESSAGEING_SENDER_ID="891399400081"
+GOOGLE_APP_ID="1:891399400081:web:6c00cda6bdb2569f782d30"
+GOOGLE_MEASUREMENT_ID="G-W936ZYM559"
+
+#kakao
+KAKAO_KEY="e91163335d3e2512e1c5fd4f18bdbc25"
+KAKAO_REST_API="3146eccdc2aeec4b00eb16139b35fd70"
+KAKAO_CLIENT_ID="3146eccdc2aeec4b00eb16139b35fd70"
+KAKAO_CLIENT_SECRET="bju53BppIUfIHyeq49XVsKFahZ1jXa9I"
+KAKAO_REDIRECT=""
+
+
+
 DATABASE_URL=mongodb+srv://daily:daily12345@daily.bvzzab1.mongodb.net/daily?retryWrites=true&w=majority
 NEXTAUTH_SECRET=EVERERYTHING
 NEXTAUTH_URL=http://localhost:3000
@@ -16,3 +39,5 @@ GITHUB_ID=""
 GITHUB_SECRET=""
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
+
+
