--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "firebase": "^10.8.1",
     "headlessui": "^0.0.0",
     "heroicons": "^2.1.1",
     "lodash": "^4.17.21",
