--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@
 #DATABASE_URL="postgresql://postgres:password@localhost:5432/daily"
 
 
-#springboot server url
-SERVER_BASE_URL=""
+#endpoint
+NEXT_PUBLIC_ENDPOINT=""
 
 
 #google
